# xares

./: .gitignore  README.md  pretrained_models  pyproject.toml  run.py  tasklist  test.py
example/ced/: ced_encoder.py
example/ced/ced/: audiotransformer.py  audiotransformer_split.py  layers.py
example/dasheng/: dasheng_encoder.py  requirements.txt
example/data2vec/: data2vec_encoder.py
example/wav2vec2/: requirements.txt  wav2vec2_encoder.py
example/whisper/: whisper_encoder.py
src/tasks/: __init__.py  asvspoof_task.py  clotho_task.py  crema_d_task.py  desed_task.py  esc50_task.py  finger_snap_task.py  fluentspeechcommands_kws_task.py  freemusicarchive_genre_task.py  fsd50k_task.py  fsdkaggle2018_task.py  gtzan_task.py  inside_outside_car_task.py  key_scratching_task.py  libricount_task.py  librispeech_asr.py  librispeech_asr_task.py  librispeech_male_female_task.py  liveenv_task.py  maestro_task.py  nsynth_instument_task.py  ravdess_task.py  speechcommandsv1_task.py  speechocean762_task.py  subway_broadcast_task.py  urbansound8k_task.py  vocalimiations_task.py  vocalimitations_task.py  vocalsound_task.py  voxceleb1_task.py  voxlingua33_task.py
src/tasks/CREMAD/: CREMAD_task.py
src/tasks/asvspoof2015/: asvspoof_task.py
src/tasks/crema_d/: crema_d_task.py  make_audio_tar.py
src/tasks/esc50/: esc50_task.py  make_audio_tar.py  task.py
src/tasks/fluentspeechcommands/: fluentspeechcommands_kws_task.py
src/tasks/freemusicarchive/: freemusicarchive_task.py
src/tasks/fsd50k/: fsd50k_task.py
src/tasks/fsdkaggle2018/: fsdkaggle2018_task.py
src/tasks/gtzan/: gtzan_task.py
src/tasks/libricount/: libricount_task.py
src/tasks/librispeech_clean_100/: librispeech_male_female_task.py  make_audio_tar.py
src/tasks/librispeech_male_female/: librispeech_male_female_task.py
src/tasks/liveenv/: liveenv_task.py
src/tasks/nsynth/: nsynth_instument_task.py
src/tasks/ravdess/: ravdess_task.py
src/tasks/speechcommands/: speechcommandsv1_task.py
src/tasks/speechocean762/: speechocean762_task.py
src/tasks/urbansound8k/: urbansound8k_task.py
src/tasks/vocalimiations/: vocalimiations_task.py
src/tasks/vocalsound/: vocalsound_task.py
src/tasks/voxceleb1/: voxceleb1_task.py
src/tasks/voxlingua/: voxlingua33_task.py
src/xares/: audio_encoder_base.py  audio_encoder_checker.py  audiowebdataset.py  common.py  dataset.py  metrics.py  models.py  run.py  task.py  task_base.py  trainer.py  utils.py
src/xares/models/: asr.py  retrival.py  simple.py
tests/: test_example_dasheng.py
tools/: download_manually.sh
tools/make_audio_tar/: esc50.py  librispeech_clean_100.py  vocalsound.py
