[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xares"
version = "0.0.6"
description = "eXtensive Audio Representation and Evaluation Suite"
dependencies = [
  "loguru",
  "numpy<2",
  "jiwer",
  "scikit-learn==1.6.0",
  "torch==2.2.1",
  "torchaudio==2.2.1",
  "torchmetrics==1.6.1",
  "pandas==2.2.3",
  "pytorch-ignite==0.5.1",
  "pyyaml",
  "soundfile==0.13.1",  
  "transformers==4.47.1",
  "tqdm",
  "webdataset==0.2.100",
]
authors = [
  {name = "Junbo Zhang", email = "zhangjunbo1@xiaomi.com"},
  {name = "Heinrich Dinkel", email = "dinkelheinrich@xiaomi.com"},
  {name = "Yadong Niu", email = "niuyadong@xiaomi.com"},
  {name = "Chenyu Liu", email = "liuchenyu3@xiaomi.com"},
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/jimbozhang/xares.git"

[project.optional-dependencies]
examples = [
  "dasheng",
]

[tool.setuptools.packages.find]
where = ["src"]
